# simple-sphinx-xml-sitemap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/docs/: conf.py  index.rst  page1.rst  page2.rst  pyproject.toml
examples/external_links/: pyproject.toml
examples/external_links/docs/: conf.py  index.rst  page.rst
examples/hello_world/: README.md  pyproject.toml
examples/hello_world/docs/: api.rst  conf.py  helpers.rst  index.rst  pyproject.rst  usage.rst
examples/hello_world/hello_world/: __init__.py  hello.py  helpers.py
simple_sphinx_xml_sitemap/: sitemap.py
