[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-sphinx-xml-sitemap"
version = "0.1.0"
description = "A simple Sphinx extension that generates an XML sitemap from navigation pages."
authors = [{name = "Matthew Rideout"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["Sphinx>=4"]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_sphinx_xml_sitemap*"]

[tool.uv.workspace]
members = ["examples/*"]
