[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-example"
version = "0.1.0"
dependencies = [
    "simple-sphinx-xml-sitemap",
]

[tool.uv.sources]
simple-sphinx-xml-sitemap = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true
