[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-example"
version = "0.1.0"
description = "A simple hello world example project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "simple-sphinx-xml-sitemap",
]

[tool.uv.sources]
simple-sphinx-xml-sitemap = { workspace = true }

[tool.setuptools.packages.find]
where = ["hello_world"]
